# jungochain

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.devnet  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: cargo-audit.yml  check-devnet.yml  check-finney.yml  check-rust.yml  check-testnet.yml  docker.yml  e2e-bittensor-tests.yml  try-runtime.yml  update-chainspec.yml
docs/: consensus.md
node/: Cargo.toml
node/src/: benchmarking.rs  client.rs  command.rs  ethereum.rs  rpc.rs  service.rs
node/src/chain_spec/: devnet.rs  finney.rs  localnet.rs  mod.rs
node/tests/: chain_spec.rs
pallets/admin-utils/: Cargo.toml
pallets/admin-utils/scripts/: benchmark.sh
pallets/admin-utils/src/: benchmarking.rs  lib.rs  weights.rs
pallets/admin-utils/tests/: mock.rs  tests.rs
pallets/commitments/scripts/: benchmark.sh
pallets/commitments/src/: weights.rs
pallets/jungochain/: Cargo.toml
pallets/jungochain/rpc/: Cargo.toml
pallets/jungochain/rpc/src/: lib.rs
pallets/jungochain/runtime-api/: Cargo.toml
pallets/jungochain/src/: benchmarks.rs  lib.rs
pallets/jungochain/tests/: children.rs  coinbase.rs  difficulty.rs  epoch.rs  math.rs  migration.rs  mock.rs  networks.rs  neuron_info.rs  registration.rs  root.rs  senate.rs  serving.rs  staking.rs  swap_coldkey.rs  swap_hotkey.rs  uids.rs  weights.rs
pallets/registry/scripts/: benchmark.sh
pallets/subtensor/src/: lib.rs
pallets/subtensor/tests/: epoch.rs  migration.rs  mock.rs  root.rs  swap_coldkey.rs  swap_hotkey.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  spec_version.rs
runtime/src/precompiles/: mod.rs  staking.rs
runtime/tests/: metadata.rs  pallet_proxy.rs
scripts/: benchmark.sh  benchmark_all.sh  build_all_chainspecs.sh  localnet.sh  publish.sh  test_specific.sh
scripts/bootstrap/: run_by_docker.sh
scripts/run/: subtensor.sh
scripts2/utils/: derive_ed25519_key.sh  generate_sr25519_key.sh
support/linting/src/: pallet_index.rs
(+20 files in other folders)
